globus-xio-gridftp-multicast (1.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-xio-gridftp-multicast (1.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-xio-gridftp-multicast (1.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-xio-gridftp-multicast (1.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:40 -0400

globus-xio-gridftp-multicast (1.3-1+gt6.@distro@) @distro@; urgency=low

  * Don't version dynamic module

 -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:42:45 -0400

globus-xio-gridftp-multicast (1.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:29 -0400

globus-xio-gridftp-multicast (1.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400

globus-xio-gridftp-multicast (1.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-xio-gridftp-multicast (1.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Mon, 17 Feb 2014 14:56:55 -0500

globus-xio-gridftp-multicast (1.0-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Mon, 17 Feb 2014 14:41:25 -0500

globus-xio-gridftp-multicast (1.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 13:16:20 -0500
