@@ -1,6 +1,6 @@
 Name: globus-xio-gridftp-multicast
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_xio_gridftp_multicast-1.5.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_xio_gridftp_multicast-1.6.tar.gz
 
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
